In machine_learning_template.ipynb > Modeling > Final Model > Model Prediction Examples section: Identify best, worst, and typical examples and update markdown documentation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7540,129 +7540,88 @@
     "</div>\n",
     "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
-    "    ℹ️ Show illustrative examples of model predictions from test data to demonstrate performance on unseen data.\n",
+    "    ℹ️ Show illustrative examples of model predictions from test data to showcase performance on unseen data.\n",
     "    <ul>\n",
     "        <li>Goal: Give stakeholders a clear picture of when the model performs well and when it struggles.</li>\n",
     "        <li>Recommendations:\n",
     "            <ul>\n",
     "                <li>Show 5-10 diverse examples: Best cases, worst cases, and typical cases.</li>\n",
-    "                <li>Show 2-5 most important features, actual vs. predicted values, and misclassifications.</li>\n",
+    "                <li>Show 2-5 most important features, actual vs. predicted values, prediction confidence, and misclassification.</li>\n",
     "                <li>Add notes about any interesting patterns or edge cases observed.</li>\n",
     "            </ul>\n",
     "        </li>\n",
-    "        <li>Example table:</li>\n",
     "    </ul>\n",
-    "    <table style=\"border-collapse: collapse; margin-top: 10px;\">\n",
-    "        <tr style=\"background-color:#e8f4fd; border-bottom: 2px solid #a6c8e9;\">\n",
-    "            <th style=\"padding: 8px;\">Age (years)</th>\n",
-    "            <th style=\"padding: 8px;\">Income (€)</th>\n",
-    "            <th style=\"padding: 8px;\">Credit Score</th>\n",
-    "            <th style=\"padding: 8px;\">Loan Amount (€)</th>\n",
-    "            <th style=\"padding: 8px;\">Actual Default</th>\n",
-    "            <th style=\"padding: 8px;\">Predicted Default</th>\n",
-    "            <th style=\"padding: 8px;\">Misclassification</th>\n",
-    "        </tr>\n",
-    "        <tr style=\"background-color:#e8f4fd;\">\n",
-    "            <td style=\"padding: 8px;\">28</td>\n",
-    "            <td style=\"padding: 8px;\">45,000</td>\n",
-    "            <td style=\"padding: 8px;\">720</td>\n",
-    "            <td style=\"padding: 8px;\">10,000</td>\n",
-    "            <td style=\"padding: 8px;\">No</td>\n",
-    "            <td style=\"padding: 8px;\">No</td>\n",
-    "            <td style=\"padding: 8px; color:green;\">No</td>\n",
-    "        </tr>\n",
-    "        <tr style=\"background-color:#d0e7fa;\">\n",
-    "            <td style=\"padding: 8px;\">55</td>\n",
-    "            <td style=\"padding: 8px;\">30,000</td>\n",
-    "            <td style=\"padding: 8px;\">650</td>\n",
-    "            <td style=\"padding: 8px;\">25,000</td>\n",
-    "            <td style=\"padding: 8px;\">Yes</td>\n",
-    "            <td style=\"padding: 8px;\">Yes</td>\n",
-    "            <td style=\"padding: 8px; color:green;\">No</td>\n",
-    "        </tr>\n",
-    "        <tr style=\"background-color:#e8f4fd;\">\n",
-    "            <td style=\"padding: 8px;\">34</td>\n",
-    "            <td style=\"padding: 8px;\">60,000</td>\n",
-    "            <td style=\"padding: 8px;\">680</td>\n",
-    "            <td style=\"padding: 8px;\">15,000</td>\n",
-    "            <td style=\"padding: 8px;\">No</td>\n",
-    "            <td style=\"padding: 8px;\">Yes</td>\n",
-    "            <td style=\"padding: 8px; color:red;\">Yes</td>\n",
-    "        </tr>\n",
-    "        <tr style=\"background-color:#d0e7fa;\">\n",
-    "            <td style=\"padding: 8px;\">47</td>\n",
-    "            <td style=\"padding: 8px;\">50,000</td>\n",
-    "            <td style=\"padding: 8px;\">640</td>\n",
-    "            <td style=\"padding: 8px;\">20,000</td>\n",
-    "            <td style=\"padding: 8px;\">Yes</td>\n",
-    "            <td style=\"padding: 8px;\">No</td>\n",
-    "            <td style=\"padding: 8px; color:red;\">Yes</td>\n",
-    "        </tr>\n",
-    "        <tr style=\"background-color:#e8f4fd;\">\n",
-    "            <td style=\"padding: 8px;\">23</td>\n",
-    "            <td style=\"padding: 8px;\">35,000</td>\n",
-    "            <td style=\"padding: 8px;\">700</td>\n",
-    "            <td style=\"padding: 8px;\">8,000</td>\n",
-    "            <td style=\"padding: 8px;\">No</td>\n",
-    "            <td style=\"padding: 8px;\">No</td>\n",
-    "            <td style=\"padding: 8px; color:green;\">No</td>\n",
-    "        </tr>\n",
-    "        <tr style=\"background-color:#d0e7fa;\">\n",
-    "            <td style=\"padding: 8px;\">60</td>\n",
-    "            <td style=\"padding: 8px;\">20,000</td>\n",
-    "            <td style=\"padding: 8px;\">600</td>\n",
-    "            <td style=\"padding: 8px;\">30,000</td>\n",
-    "            <td style=\"padding: 8px;\">Yes</td>\n",
-    "            <td style=\"padding: 8px;\">Yes</td>\n",
-    "            <td style=\"padding: 8px; color:green;\">No</td>\n",
-    "        </tr>\n",
-    "    </table>\n",
-    "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e6ce84fa-2c0b-4f95-9131-f8322d28e601",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 <strong>Identify Best, Worst, and Typical Cases.</strong>\n",
+    "    📌 Identify best examples (correct with high confidence), worst examples (incorrect with high confidence), and typical examples (average confidence).\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beea3356-5578-4a61-b599-7a924cb4430d",
+   "id": "74288008-dad0-4b12-8a30-bd98512d9c0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get top 5 most important features\n",
-    "# Note: Ensure feature_importance_df was created in feature importance section \n",
+    "# --- Create DataFrame with top 5 features, actual and predicted values, prediction confidence, and misclassifications from test data ---\n",
+    "# Combine test features with actual and predicted target values into a single DataFrame\n",
+    "prediction_examples = X_test.copy()  # raw features (before transformation) for easier interpretability\n",
+    "prediction_examples.columns = prediction_examples.columns.str.title().str.replace(\"_\", \" \")  # format feature names\n",
+    "prediction_examples[\"Actual\"] = y_test\n",
+    "prediction_examples[\"Predicted\"] = y_test_pred\n",
+    "\n",
+    "# Calculate prediction confidence (ensure final_model supports predict_proba and X_test_transformed is correctly preprocessed)\n",
+    "prediction_examples[\"Confidence Score\"] = final_model.predict_proba(X_test_transformed).max(axis=1)\n",
+    "prediction_examples[\"Confidence\"] = prediction_examples[\"Confidence Score\"].apply(lambda x: f\"{x:.0%}\")  # format as percentages\n",
+    "\n",
+    "# Calculate misclassification (and format for better readability)\n",
+    "prediction_examples[\"Misclassification\"] = prediction_examples[\"Predicted\"] != prediction_examples[\"Actual\"]\n",
+    "prediction_examples[\"Misclassification\"] = prediction_examples[\"Misclassification\"].map({True: \"❌ Yes\", False: \"✅ No\"})  \n",
+    "\n",
+    "# Get top 5 most important features (ensure feature_importance_df was created in feature importance section) \n",
     "top5_features = feature_importance_df.sort_values(\"importance\", ascending=False).head(5)[\"feature\"]\n",
     "\n",
-    "# Keep only top 5 features and error metrics\n",
-    "# Note: Ensure df_test was created in model evaluation section \n",
-    "columns_to_keep = list(top5_features) + [\"Actual\", \"Predicted\", \"Misclassification\"]\n",
-    "df_test = df_test[columns_to_keep].copy()\n",
+    "# Filter DataFrame columns\n",
+    "columns_to_keep = list(top5_features) + [\"Actual\", \"Predicted\", \"Confidence Score\", \"Confidence\", \"Misclassification\"]\n",
+    "prediction_examples = prediction_examples[columns_to_keep].copy()\n",
     "\n",
-    "# Get confidence scores for predictions\n",
-    "# Ensure final_model supports `predict_proba` and X_test_transformed is correctly preprocessed\n",
-    "df_test[\"Confidence\"] = final_model.predict_proba(X_test_transformed).max(axis=1)\n",
+    "# --- Identify best examples ---\n",
+    "# Get the top 5 correctly classified cases with highest confidence scores for each class \n",
+    "best_class_1 = prediction_examples[(prediction_examples[\"Actual\"] == 1) & (prediction_examples[\"Misclassification\"] == \"✅ No\")].sort_values(\"Confidence Score\", ascending=False).head(5)\n",
+    "best_class_0 = prediction_examples[(prediction_examples[\"Actual\"] == 0) & (prediction_examples[\"Misclassification\"] == \"✅ No\")].sort_values(\"Confidence Score\", ascending=False).head(5)\n",
     "\n",
-    "# Best cases: Top 10 correctly classified cases with highest confidence scores\n",
-    "print(\"Best cases:\")\n",
-    "print(df_test[df_test[\"Misclassification\"] == False].sort_values(\"Confidence\", ascending=False).head(10))\n",
+    "# Combine and show best prediction examples from each class\n",
+    "best_examples = pd.concat([best_class_1, best_class_0]).drop(columns=[\"Confidence Score\"])\n",
+    "print(\"Best examples (correct with high confidence):\")\n",
+    "display(best_examples)\n",
     "\n",
-    "# Worst cases: Top 10 misclassified cases despite high confidence scores\n",
-    "print(\"Worst cases:\")\n",
-    "print(df_test[df_test[\"Misclassification\"] == True].sort_values(\"Confidence\", ascending=False).head(10))\n",
+    "# --- Identify worst examples ---\n",
+    "# Get the top 5 misclassified cases despite high confidence scores for each class\n",
+    "worst_class_1 = prediction_examples[(prediction_examples[\"Actual\"] == 1) & (prediction_examples[\"Misclassification\"] == \"❌ Yes\")].sort_values(\"Confidence Score\", ascending=False).head(5)\n",
+    "worst_class_0 = prediction_examples[(prediction_examples[\"Actual\"] == 0) & (prediction_examples[\"Misclassification\"] == \"❌ Yes\")].sort_values(\"Confidence Score\", ascending=False).head(5)\n",
     "\n",
-    "# Typical cases: 10 cases closest to the mean confidence score\n",
-    "mean_confidence = df_test[\"Confidence\"].mean()\n",
-    "df_test[\"Difference from Mean Confidence\"] = np.abs(df_test[\"Confidence\"] - mean_confidence)\n",
-    "print(\"Typical cases:\")\n",
-    "print(df_test.sort_values(\"Difference from Mean Confidence\").head(10))"
+    "# Combine and show worst prediction examples from each class\n",
+    "worst_examples = pd.concat([worst_class_1, worst_class_0]).drop(columns=[\"Confidence Score\"])\n",
+    "print(\"Worst examples (incorrect with high confidence):\")\n",
+    "display(worst_examples)\n",
+    "\n",
+    "# --- Identify typical examples ---\n",
+    "# Calculate average confidence score\n",
+    "mean_confidence = prediction_examples[\"Confidence Score\"].mean()\n",
+    "\n",
+    "# Calculate difference from average confidence for each case\n",
+    "prediction_examples[\"Difference from Mean Confidence\"] = np.abs(prediction_examples[\"Confidence Score\"] - mean_confidence)\n",
+    "\n",
+    "# Get the top 5 cases with confidence scores closest to the average confidence for each class\n",
+    "typical_class_1 = prediction_examples[prediction_examples[\"Actual\"] == 1].sort_values(\"Difference from Mean Confidence\").head(5)\n",
+    "typical_class_0 = prediction_examples[prediction_examples[\"Actual\"] == 0].sort_values(\"Difference from Mean Confidence\").head(5)\n",
+    "\n",
+    "# Combine and show typical prediction examples from each class\n",
+    "typical_examples = pd.concat([typical_class_1, typical_class_0]).drop(columns=[\"Confidence Score\", \"Difference from Mean Confidence\"])\n",
+    "print(\"Typical examples (average confidence):\")\n",
+    "display(typical_examples)"
    ]
   },
   {
