In machine_learning_template.ipynb > Modeling > Final Model > Model Prediction Examples section: Display best, worst, and typical examples as single table or in separate tables

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7546,7 +7546,7 @@
     "        <li>Recommendations:\n",
     "            <ul>\n",
     "                <li>Show 5-10 diverse examples: Best cases, worst cases, and typical cases.</li>\n",
-    "                <li>Show 2-5 most important features, actual vs. predicted values, prediction confidence, and misclassification.</li>\n",
+    "                <li>Show 2-5 most important features, actual vs. predicted values, prediction confidence, and whether the example was misclassified.</li>\n",
     "                <li>Add notes about any interesting patterns or edge cases observed.</li>\n",
     "            </ul>\n",
     "        </li>\n",
@@ -7622,6 +7622,57 @@
     "typical_examples = pd.concat([typical_class_1, typical_class_0]).drop(columns=[\"Confidence Score\", \"Difference from Mean Confidence\"])\n",
     "print(\"Typical examples (average confidence):\")\n",
     "display(typical_examples)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b99b668e-2e12-4350-8ca3-3750c5642883",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Display the best, worst, and typical prediction examples for each class in the test data, including the top five most important features, actual vs. predicted values, prediction confidence, and whether the example was misclassified.\n",
+    "</div>\n",
+    "\n",
+    "<p style=\"background-color:#f7fff8; padding:15px; border-width:3px; border-color:#e0f0e0; border-style:solid; border-radius:6px\">\n",
+    "    💡 Option 1: Single Table (Loan Default Example)\n",
+    "</p>\n",
+    "\n",
+    "| Example | Income (€) | Age | Credit Score | Loan Amount (€) | Work Years | Actual Default | Predicted Default | Confidence | Misclassified |\n",
+    "|---------|------------|-----|--------------|-----------------|------------|----------------|-------------------|------------|---------------|\n",
+    "| Best    | 48,000     | 26  | 740          | 12,000          | 1          | Yes            | Yes               | 99%        | ✅ No        |\n",
+    "| Best    | 72,000     | 56  | 770          | 25,000          | 2          | No             | No                | 100%       | ✅ No        |\n",
+    "| Worst   | 55,000     | 42  | 630          | 40,000          | 3          | Yes            | No                | 95%        | ❌ Yes       |\n",
+    "| Worst   | 32,000     | 24  | 620          | 18,000          | 1          | No             | Yes               | 98%        | ❌ Yes       |\n",
+    "| Typical | 60,000     | 47  | 710          | 30,000          | 3          | Yes            | Yes               | 94%        | ✅ No        |\n",
+    "| Typical | 38,000     | 24  | 750          | 10,000          | 4          | No             | No                | 94%        | ✅ No        |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0e97024-a4e0-4bbd-80c1-ab49bc2b32d7",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#f7fff8; padding:15px; border-width:3px; border-color:#e0f0e0; border-style:solid; border-radius:6px\">\n",
+    "    💡 Option 2: Separate Tables (Loan Default Example)\n",
+    "</p>\n",
+    "\n",
+    "🏆 Best Predictions (Correct with High Confidence)\n",
+    "| Income (€) | Age | Credit Score | Loan Amount (€) | Work Years | Actual Default | Predicted Default | Confidence | Misclassified |\n",
+    "|------------|-----|--------------|-----------------|------------|----------------|-------------------|------------|---------------|\n",
+    "| 48,000     | 26  | 740          | 12,000          | 1          | Yes            | Yes               | 99%        | ✅ No         |\n",
+    "| 72,000     | 56  | 770          | 25,000          | 2          | No             | No                | 100%       | ✅ No         |\n",
+    "\n",
+    "⚠️ Worst Predictions (Incorrect with High Confidence)\n",
+    "| Income (€) | Age | Credit Score | Loan Amount (€) | Work Years | Actual Default | Predicted Default | Confidence | Misclassified |\n",
+    "|------------|-----|--------------|-----------------|------------|----------------|-------------------|------------|---------------|\n",
+    "| 55,000     | 42  | 630          | 40,000          | 3          | Yes            | No                | 95%        | ❌ Yes        |\n",
+    "| 32,000     | 24  | 620          | 18,000          | 1          | No             | Yes               | 98%        | ❌ Yes        |\n",
+    "\n",
+    "➖ Typical Predictions (Average Confidence)\n",
+    "| Income (€) | Age | Credit Score | Loan Amount (€) | Work Years | Actual Default | Predicted Default | Confidence | Misclassified |\n",
+    "|------------|-----|--------------|-----------------|------------|----------------|-------------------|------------|---------------|\n",
+    "| 60,000     | 47  | 710          | 30,000          | 3          | Yes            | Yes               | 94%        | ✅ No         |\n",
+    "| 38,000     | 24  | 750          | 10,000          | 4          | No             | No                | 94%        | ✅ No         |"
    ]
   },
   {
