In machine_learning_template.ipynb > Modeling > Baseline Models section: Separate Classification Report and Confusion Matrix into two sections

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5284,22 +5284,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b2d3988-2eb7-441d-acbf-e733a78e5be8",
+   "id": "5e1157f8-e28e-49a6-b46e-a1d9d84e6f57",
    "metadata": {},
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
-    "    <h3 style=\"margin:0px\">Classification Report and Confusion Matrix</h3>\n",
+    "    <h3 style=\"margin:0px\">Classification Report</h3>\n",
     "</div>\n",
     "\n",
     "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
-    "    📌 Create classification report and plot confusion matrix for all baseline models on the validation data.\n",
+    "    📌 Create classification report for all baseline models on the validation data (no outlier handling).\n",
     "</p> "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48868333-e803-4682-96a5-5aa60e0bc67c",
+   "id": "a9bb3dad-97bc-487d-af17-b21cb26ec53d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create classification report for all baseline models\n",
+    "for model_name, model_result in baseline_model_results.items():\n",
+    "    print(f\"\\n{model_name}: Classification Report\")\n",
+    "    print(classification_report(y_val, model_result[\"y_val_pred\"], zero_division=0))  # disable zero-division warning if no predictions for a given class (sets metric to 0) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0c8de60-8716-4688-9133-377dc322a39e",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Confusion Matrix</h3>\n",
+    "</div>\n",
+    "\n",
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Plot confusion matrix for all baseline models on the validation data (no outlier handling).\n",
+    "</p> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6369504-0f81-4487-806d-b50ab4964d3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5340,17 +5367,32 @@
     "        plt.show()\n",
     "\n",
     "\n",
-    "# Show classification report and use function to plot confusion matrix for all baseline models\n",
-    "for model_name, model_result in baseline_model_results.items():\n",
-    "    # Classification report\n",
-    "    print(f\"{model_name}: Classification Report\")\n",
-    "    print(classification_report(y_val, model_result[\"y_val_pred\"], zero_division=0))  # disable zero-division warning if no predictions for a given class (sets metric to 0) \n",
+    "# --- Use function to plot confusion matrix for all baseline models ---\n",
+    "# Calculate number of rows and columns for subplot grid\n",
+    "n_plots = len(baseline_model_results)\n",
+    "n_cols = 3  \n",
+    "n_rows = math.ceil(n_plots / n_cols) \n",
     "\n",
-    "    # Confusion matrix\n",
-    "    plot_confusion_matrix(y_val, model_result[\"y_val_pred\"], title=f\"{model_name}: Confusion Matrix\")\n",
+    "# Create subplot grid with figure size based on 5x5 inches per subplot\n",
+    "fig, axes = plt.subplots(n_rows, n_cols, figsize=(n_cols * 5, n_rows * 5))\n",
     "\n",
-    "    # Separation line\n",
-    "    print(\"=\" * 100)"
+    "# Flatten the axes for easier iteration\n",
+    "axes = axes.flat\n",
+    "\n",
+    "# Iterate over each model\n",
+    "for i, (model_name, model_result) in enumerate(baseline_model_results.items()):\n",
+    "    # Plot confusion matrix for current model\n",
+    "    plot_confusion_matrix(y_val, model_result[\"y_val_pred\"], title=f\"{model_name}\", axes=axes[i])\n",
+    "\n",
+    "# Hide any unused subplots\n",
+    "for j in range(i + 1, len(axes)):\n",
+    "    axes[j].axis(\"off\")\n",
+    "    \n",
+    "# Adjust layout to prevent overlap\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
    ]
   },
   {
