In machine_learning_template.ipynb > Modeling > Hyperparameter Tuning section: Separate Classification Report and Confusion Matrix into two sections

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6698,23 +6698,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e642e3b9-0b0f-41db-abaa-543c1a8d071f",
+   "id": "d6bdc8f0-c031-46cf-8902-bc419434c3fa",
    "metadata": {},
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
-    "    <h3 style=\"margin:0px\">Classification Report and Confusion Matrix</h3>\n",
+    "    <h3 style=\"margin:0px\">Classification Report</h3>\n",
     "</div> \n",
     "\n",
     "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
     "    <strong>Default Thresholds</strong> <br>\n",
-    "    📌 Show classification report and plot confusion matrix of hyperparameter-tuned models with default thresholds on the validation data.\n",
+    "    📌 Show classification report of hyperparameter-tuned models with default thresholds on the validation data.\n",
     "</p> "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecd22a07-d99b-4d22-af6a-ee6113ba054c",
+   "id": "f474358e-d8d7-4cbe-881d-354100d5441f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6725,9 +6725,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "113c3fae-855b-435c-9bd8-02ff5d1dfd9e",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    <strong>Optimized Thresholds</strong> <br>\n",
+    "    📌 Show classification report of hyperparameter-tuned models with optimized thresholds on the validation data.\n",
+    "</p> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5386e29f-a5c5-4b1e-afa0-9f4cfe3074b3",
+   "id": "a44e4057-80e1-4a76-865f-23949d6131d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create classification report for all tuned models with optimized thresholds\n",
+    "for model_name, model_result in tuned_threshold_model_results.items():\n",
+    "    print(f\"\\n{model_name} (Optimized Threshold): Classification Report\")\n",
+    "    print(classification_report(y_val, model_result[\"y_val_pred\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc384eb9-cc1d-4638-babe-7986b307ab91",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Confusion Matrix</h3>\n",
+    "</div> \n",
+    "\n",
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    <strong>Default Thresholds</strong> <br>\n",
+    "    📌 Plot confusion matrix of hyperparameter-tuned models with default thresholds on the validation data.\n",
+    "</p> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43cdd5f1-d9b0-446a-b7e4-dac7fbc62878",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6747,6 +6786,10 @@
     "for i, (model_name, model_result) in enumerate(tuned_model_results.items()):\n",
     "    # Plot confusion matrix for current model\n",
     "    plot_confusion_matrix(y_val, model_result[\"y_val_pred\"], title=f\"{model_name} (Default Threshold)\", axes=axes[i])\n",
+    "\n",
+    "# Hide any unused subplots\n",
+    "for j in range(i + 1, len(axes)):\n",
+    "    axes[j].axis(\"off\")\n",
     "    \n",
     "# Adjust layout to prevent overlap\n",
     "fig.tight_layout()\n",
@@ -6757,32 +6800,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69ccf47a-d1f2-4a91-a5d6-8f2e741e8de9",
+   "id": "d9328761-c020-405d-9af0-cc295bb51d0e",
    "metadata": {},
    "source": [
     "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
     "    <strong>Optimized Thresholds</strong> <br>\n",
-    "    📌 Show classification report and plot confusion matrix of hyperparameter-tuned models with optimized thresholds on the validation data.\n",
+    "    📌 Plot confusion matrix of hyperparameter-tuned models with optimized thresholds on the validation data.\n",
     "</p> "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f8b009d-7e24-403e-8a30-f49289877bcd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create classification report for all tuned models with optimized thresholds\n",
-    "for model_name, model_result in tuned_threshold_model_results.items():\n",
-    "    print(f\"\\n{model_name} (Optimized Threshold): Classification Report\")\n",
-    "    print(classification_report(y_val, model_result[\"y_val_pred\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd95f369-bed2-4a84-848a-813b65416870",
+   "id": "0e9b6f9f-4aa5-424e-b14c-5e981eece1ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6802,7 +6832,11 @@
     "for i, (model_name, model_result) in enumerate(tuned_threshold_model_results.items()):\n",
     "    # Plot confusion matrix for current model\n",
     "    plot_confusion_matrix(y_val, model_result[\"y_val_pred\"], title=f\"{model_name} (Optimized Threshold)\", axes=axes[i])\n",
-    "    \n",
+    "\n",
+    "# Hide any unused subplots\n",
+    "for j in range(i + 1, len(axes)):\n",
+    "    axes[j].axis(\"off\")\n",
+    "\n",
     "# Adjust layout to prevent overlap\n",
     "fig.tight_layout()\n",
     "\n",
