--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7212,11 +7212,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88f36b8f-b579-4e0f-83e9-a1ac4ad8d28f",
+   "id": "78f902d1-6c7b-4c9f-b9be-c29dcad03396",
    "metadata": {},
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
-    "    <h3 style=\"margin:0px\">Classification Report and Confusion Matrix</h3>\n",
+    "    <h3 style=\"margin:0px\">Classification Report</h3>\n",
     "</div>\n",
     "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
@@ -7227,7 +7227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44f959d-8358-45bc-bab3-48ee8ef5c90f",
+   "id": "7de11214-4afc-41dd-96e7-42b124d8b0b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7242,9 +7242,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e450fc63-1b0c-4909-8f94-3d9af1a8aacc",
+   "id": "4bfc0330-3259-4f0c-a5e2-9a054e2e986f",
    "metadata": {},
    "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Confusion Matrix</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Plot confusion matrix for training, validation, and test data.\n",
     "</div>"
@@ -7253,7 +7257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24f068b1-1d72-42a5-b91f-e4f1c8e2bfad",
+   "id": "a067a723-f53d-42e6-a342-690a67eefa19",
    "metadata": {},
    "outputs": [],
    "source": [
