In machine_learning_template.ipynb > Modeling section: Update markdown documentation comments throughout entire section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5004,6 +5004,7 @@
     "    except Exception as e:\n",
     "        print(f\"An error occurred while saving the model: {e}\")\n",
     "\n",
+    "\n",
     "# Function to load model from .pkl file \n",
     "def load_model(filename):\n",
     "    try:\n",
@@ -5051,13 +5052,12 @@
     "        </li>\n",
     "        <li>Additional Diagnostics:\n",
     "            <ul>\n",
-    "                <li>Comparison Plots</li>\n",
-    "                <li>Comparison Tables</li>\n",
+    "                <li>Metrics Comparison Table</li>\n",
     "                <li>Precision-Recall Curves</li>\n",
     "                <li>Classification Report</li>\n",
     "                <li>Confusion Matrix</li>                \n",
-    "                <li>Feature Misclassification Analysis</li> \n",
     "                <li>Overfitting</li>\n",
+    "                <li>Feature Misclassification Analysis</li> \n",
     "            </ul>\n",
     "        </li>\n",
     "    </ul>\n",
@@ -5292,7 +5292,7 @@
     "</div>\n",
     "\n",
     "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
-    "    📌 Create classification report for all baseline models on the validation data (no outlier handling).\n",
+    "    📌 Create classification report for all baseline models on the validation data.\n",
     "</p> "
    ]
   },
@@ -5319,7 +5319,7 @@
     "</div>\n",
     "\n",
     "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
-    "    📌 Plot confusion matrix for all baseline models on the validation data (no outlier handling).\n",
+    "    📌 Plot confusion matrix for all baseline models on the validation data.\n",
     "</p> "
    ]
   },
@@ -5785,13 +5785,14 @@
     "</div>\n",
     "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    <strong>Model Selection</strong> <br>\n",
     "    💡  Select the best performing baseline models for hyperparameter tuning. <br><br>\n",
     "    Example: The following models outperformed the other candidates on the evaluation metrics (accuracy, recall, precision, F1-score, ROC-AUC, AUC-PR) and additional diagnostics (precision-recall curves, classification report, confusion matrix, overfitting, feature misclassification analysis) and were selected for hyperparameter tuning:  \n",
     "    <ul>\n",
     "        <li><b>Random Forest</b>: Showed balanced, high performance across key metrics (notably F1-score and AUC-PR) and minimal overfitting.</li>\n",
     "        <li><b>XGBoost</b>: Achieved leading performance on key metrics, especially ROC-AUC and F1-score.</li>\n",
     "    </ul>\n",
-    "    Next steps: \n",
+    "    <strong>Next steps</strong> <br>\n",
     "    <ul>\n",
     "        <li>Tune the hyperparameters of each model using grid search or randomized search.</li>\n",
     "        <li>Retrain the best-performing model from each algorithm and plot precision-recall curves.</li>\n",
@@ -7064,6 +7065,7 @@
     "    </ul>\n",
     "    <strong>Next steps</strong> <br>\n",
     "    <ul>\n",
+    "        <li>Retrain the final model, save it to a file, and apply the optimized threshold.</li>\n",
     "        <li>Evaluate the final model on the training, validation, and test sets to confirm its generalizability.</li>\n",
     "        <li>Use the same performance metrics as for the baseline and hyperparameter-tuned models \n",
     "            (accuracy, recall, precision, F1-score, ROC-AUC, AUC-PR) along with additional diagnostics \n",
