In machine_learning_template.ipynb > Appendix > Model Hyperparameters section: Add information in markdown cell

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7892,9 +7892,13 @@
    "id": "1f73fca8-de43-459f-bd34-755392003ab3",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
     "    <h2 style=\"margin:0px\">Model Hyperparameters</h2>\n",
-    "</div> "
+    "</div> \n",
+    "\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Overview of hyperparameters and their default values for both regression and classification models. \n",
+    "</div>"
    ]
   },
   {
