In machine_learning_template.ipynb > Summary section: Update Data Preprocessing summary

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7776,36 +7776,43 @@
     "    <h2 style=\"margin:0px\">Data Preprocessing</h2>\n",
     "</div> \n",
     "\n",
-    "Use `pandas`, `sklearn`, `sqlalchemy`, and `mysql-connector-python` for data loading, cleaning, transformation, and saving.\n",
-    "- **Load data**:\n",
+    "Used `pandas` and `sklearn` for data loading, cleaning, transformation, and saving.\n",
+    "- **Loaded data**:\n",
     "    - From a .csv file using `pandas` `read_csv`.\n",
     "    - From a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `pandas` `read_sql`.\n",
-    "- **Remove duplicates**:\n",
-    "    - Drop duplicate rows (e.g., based on the ID column) using `pandas` `drop_duplicates`.\n",
-    "- **Handle incorrect data types**:\n",
-    "    - Convert string columns to numerical types (`pandas` `astype`) and datetime types (`pandas` `to_datetime`).\n",
-    "- **Extract features**:\n",
-    "    - Create categorical features from string columns using custom functions with `pandas` `apply`.\n",
-    "    - Create numerical features from string columns using custom functions with `pandas` `apply`, and `re` for numeric pattern matching.\n",
-    "    - Create boolean features from string columns using `lambda` functions with `pandas` `apply`.\n",
-    "- **Handle missing values**:\n",
-    "    - Delete rows with missing values using `pandas` `dropna`.\n",
-    "    - Impute missing values: Fill in the median for numerical columns or the mode for categorical columns using `pandas` `fillna`.\n",
-    "- **Handle outliers**:\n",
-    "    - Remove univariate outliers using statistical methods (e.g., 3 standard deviations or 1.5 IQR) with a custom transformer class that inherits from `sklearn` `BaseEstimator` and `TransformerMixin`.\n",
-    "- **Save the preprocessed data**:\n",
-    "    - As a .csv file using `pandas` `to_csv`.\n",
-    "    - In a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `pandas` `to_sql`.\n",
+    "- **Standardized column names and labels**:\n",
+    "    - To `snake_case` using `pandas` string methods and `apply` with custom functions.\n",
+    "- **Handled duplicates**:\n",
+    "    - Removed duplicate rows (e.g., based on the ID column) using `pandas` `drop_duplicates`.\n",
+    "- **Handled data types**:\n",
+    "    - Converted string columns to numerical types (`pandas` `astype`) and datetime types (`pandas` `to_datetime`).\n",
+    "    - Converted string columns with two categories to boolean columns using `pandas` `map`.\n",
     "- **Train-validation-test split**:\n",
     "    - Split data into training (e.g., 70%), validation (15%), and test (15%) sets using `sklearn` `train_test_split`.\n",
-    "- **Polynomial features**:\n",
-    "    - Create polynomial features using `sklearn` `PolynomialFeatures`.\n",
+    "- **Engineered new features**:\n",
+    "    - Derived categorical features from raw text columns using `pandas` `apply` with custom functions.\n",
+    "    - Derived numerical features from raw text columns using `pandas` `apply` with custom functions and `re` for numeric pattern matching.\n",
+    "    - Derived boolean features from raw text columns using `pandas` `apply` with `lambda` functions.\n",
+    "    - Derived numerical features from categorical text columns using target encoding.\n",
+    "    - Derived categorical features from categorical text columns using tiering with `pandas` `apply` and custom tier mapping dictionaries.\n",
+    "- **Defined semantic type** for each column (numerical, categorical, boolean).\n",
+    "- **Handled missing values**:\n",
+    "    - Deleted rows with missing values using `pandas` `dropna`.\n",
+    "    - Imputed missing values: Filled in the median for numerical columns or the mode for categorical columns using `pandas` `fillna`.\n",
+    "- **Handled outliers**:\n",
+    "    - Identified univariate outliers using statistical methods (e.g., 3SD or 1.5 IQR) with custom transformer classes that inherit from `sklearn` `BaseEstimator` and `TransformerMixin`.\n",
+    "    - Identified multivariate outliers using `sklearn` `IsolationForest`. \n",
     "- **Feature scaling and encoding**:\n",
-    "    - Scale numerical features using standard scaling with `sklearn` `StandardScaler` or min-max normalization with `MinMaxScaler`.\n",
-    "    - Encode categorical features:\n",
-    "        - Nominal features: Use one-hot encoding with `sklearn` `OneHotEncoder`.\n",
-    "        - Ordinal features: Use ordinal encoding with `sklearn` `OrdinalEncoder`.\n",
-    "    - Apply scaling and encoding together using `sklearn` `ColumnTransformer`."
+    "    - Scaled numerical features using standard scaling with `sklearn` `StandardScaler` or min-max normalization with `MinMaxScaler`.\n",
+    "    - Encoded categorical features:\n",
+    "        - Nominal features: Used one-hot encoding with `sklearn` `OneHotEncoder`.\n",
+    "        - Ordinal features: Used ordinal encoding with `sklearn` `OrdinalEncoder`.\n",
+    "    - Applied scaling and encoding together using `sklearn` `ColumnTransformer`.\n",
+    "- **Polynomial features**:\n",
+    "    - Created polynomial features using `sklearn` `PolynomialFeatures`.\n",
+    "- **Saved the preprocessed data**:\n",
+    "    - For training, validation, and test sets as .csv files using `pandas` `to_csv`.\n",
+    "    - In a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `pandas` `to_sql`."
    ]
   },
   {
